--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,9 @@ spring.application.name=todoapplication
 
 spring.datasource.url=jdbc:mysql://localhost:3306/todo_application
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Hari@2003
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-server.port=8080
